mbtiles/tests/snapshots/mbtiles__databases@flat__v1.snap
---
source: mbtiles/tests/mbtiles.rs
expression: actual_value
---
[[]]
type = 'table'
tbl_name = 'metadata'
sql = '''
CREATE TABLE metadata (
             name text NOT NULL PRIMARY KEY,
             value text)'''
values = [
    '(  "agg_tiles_hash", "9ED9178D7025276336C783C2B54D6258"  )',
    '(  "md-edit", "value - v1"  )',
    '(  "md-remove", "value - remove"  )',
    '(  "md-same", "value - same"  )',
]

[[]]
type = 'table'
tbl_name = 'tiles'
sql = '''
CREATE TABLE tiles (
             zoom_level integer NOT NULL,
             tile_column integer NOT NULL,
             tile_row integer NOT NULL,
             tile_data blob,
             PRIMARY KEY(zoom_level, tile_column, tile_row))'''
values = [
    '(  3, 6, 7, blob(root)  )',
    '(  5, 0, 0, blob(same)  )',
    '(  5, 0, 1, blob()  )',
    '(  5, 1, 1, blob(edit-v1)  )',
    '(  5, 1, 2, blob()  )',
    '(  5, 1, 3, blob(non-empty)  )',
    '(  5, 2, 2, blob(remove)  )',
    '(  5, 2, 3, blob()  )',
    '(  6, 0, 3, blob(same)  )',
    '(  6, 0, 5, blob(1-keep-1-rm)  )',
    '(  6, 1, 4, blob(edit-v1)  )',
    '(  6, 2, 6, blob(1-keep-1-rm)  )',
]

[[]]
type = 'index'
tbl_name = 'metadata'

[[]]
type = 'index'
tbl_name = 'tiles'
